--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - name: Install k3s server
   command: curl -sfL https://get.k3s.io | sh - --kube-apiserver-arg token-auth-file=
-  when: ( {{ mode }} == "server" )
+  when: ( mode == "server" )
 
 - name: Fetch the file from the master
   run_once: yes
@@ -11,14 +11,14 @@
     src: /var/lib/rancher/k3s/server/node-token
     dest: buffer/tmp/node-token
     flat: yes
-  when: ( {{ mode }} == "node" )
+  when: ( mode == "node" )
 
 - name: Copy node token from master
   copy: 
     src: buffer/tmp/node-token
     dest: /tmp/
-  when: ( {{ mode }} == "node" )
+  when: ( mode == "node" )
 
 - name: Install k3s node
   command: curl -sfL https://get.k3s.io | K3S_URL=https://{{ master_ip }}:6443 K3S_TOKEN=`cat  /tmp/node-token` sh -
-  when: ( {{ mode }} == "node" )
+  when: ( mode == "node" )
