--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,6 +14,7 @@
   synchronize:
     src: /var/lib/rancher/k3s/server/node-token
     dest: /tmp/node-token
+    delegate_to: vnode-0
   when: ( mode == "node" )
 
 - name: Install k3s node
