--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,5 +17,5 @@
   when: ( mode == "node" )
 
 - name: Install k3s node
-  command: K3S_URL=https://{{ master_ip }}:6443 K3S_TOKEN=`cat  /tmp/node-token` sh /tmp/k3s.sh
+  shell: K3S_URL=https://{{ master_ip }}:6443 K3S_TOKEN=`cat  /tmp/node-token` sh /tmp/k3s.sh
   when: ( mode == "node" )
