--- a/tests/test.yml
+++ b/tests/test.yml
@@ -5,5 +5,4 @@
     - role: ansible-role-k3s
       master_ip: localhost
       mode: server
-      node_labels: 
-        - unlabelled = true
+      node_label: unlabelled=true
