--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,6 +21,10 @@
     state: link
   when: ( mode == "server" )
 
+- name: Install Helm
+  command: curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
+  when: ( mode == "server" )
+
 # - name: Synchronization of k3s node token
 #   synchronize:
 #     src: /var/lib/rancher/k3s/server/node-token
