--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -40,5 +40,6 @@
 #   when: ( mode == "node" )
 
 - name: Install k3s node
-  shell: K3S_URL=https://{{ master_ip }}:6443 K3S_TOKEN=`cat  /mnt/nfs/node-token` sh /tmp/k3s.sh --node-label {{ node_label }}
+  shell: K3S_URL=https://{{ master_ip }}:6443 K3S_TOKEN=`cat  /mnt/nfs/node-token` sh /tmp/k3s.sh 
+  #--node-label {{ node_label }}
   when: ( mode == "node" )
