--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,7 +7,7 @@
     dest: /tmp/k3s.sh
 
 - name: Install k3s server
-  command: sh /tmp/k3s.sh --docker
+  command: sh /tmp/k3s.sh --docker --no-deploy traefik
   when: ( mode == "server" )
 
 - name: Copy node token into nfs folder
@@ -38,6 +38,11 @@
 #     dest: /tmp/node-token
 #   delegate_to: "{{ inventory_hostname }}"
 #   when: ( mode == "node" )
+
+- name: wait 5 min for flannel to start
+  wait_for:
+    timeout: 300
+  delegate_to: localhost
 
 - name: Install k3s node
   shell: K3S_URL=https://{{ master_ip }}:6443 K3S_TOKEN=`cat  /mnt/nfs/node-token` sh /tmp/k3s.sh 
