--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -39,10 +39,10 @@
 #   delegate_to: "{{ inventory_hostname }}"
 #   when: ( mode == "node" )
 
-#- name: wait 2 min for flannel to start
-#  wait_for:
-#    timeout: 120
-#  delegate_to: localhost
+- name: wait 10 min for flannel to start
+  wait_for:
+    timeout: 600 
+  delegate_to: localhost
 
 - name: Install k3s node
   shell: INSTALL_K3S_EXEC="--docker" K3S_URL=https://{{ master_ip }}:6443 K3S_TOKEN=`cat  /mnt/nfs/node-token` sh /tmp/k3s.sh 
