--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -47,10 +47,6 @@
   register: token
   when: ( mode == "server" )
 
-- name: print token
-  debug:
-    var: token.stdout_lines
-
 # - name: Synchronization of k3s node token
 #   synchronize:
 #     src: /var/lib/rancher/k3s/server/node-token
@@ -68,3 +64,8 @@
   #shell: INSTALL_K3S_EXEC="--docker" K3S_URL=https://{{ master_ip }}:6443 K3S_TOKEN=`cat  /mnt/nfs/node-token` sh /tmp/k3s.sh 
   #--node-label {{ node_label }}
   when: ( mode == "node" )
+
+- name: print token
+  debug:
+    var: token.stdout_lines
+  when: ( mode == "server" )
