--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,6 +23,9 @@
 
 - name: Install Helm v2
   shell: |
+    curl -LO https://git.io/get_helm.sh
+    chmod 700 get_helm.sh
+    ./get_helm.sh
     kubectl -n kube-system create serviceaccount tiller
 
     kubectl create clusterrolebinding tiller \
