--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,3 +4,6 @@
 dashboardNodePort: 30443
 helm_version: v2
 node_label: unlabelled=true
+nfs_exports:
+    - path: "/home"
+      export: "*(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"
