--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,7 +7,7 @@
     dest: /tmp/k3s.sh
 
 - name: Install k3s server
-  command: sh /tmp/k3s.sh --no-deploy traefik
+  command: INSTALL_K3S_VERSION={{ k3s_version }} sh /tmp/k3s.sh --no-deploy traefik
   when: ( mode == "server" )
 
 - name: Link kubectl to /usr/bin/kubectl
