install travis test

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,14 +24,11 @@ install:
   # Create ansible.cfg with correct roles_path
   - sudo printf '[defaults]\nroles_path=../' > ansible.cfg 
 
-  - ansible-galaxy install indigo-dc.nfs
-
-  - ansible-galaxy install indigo-dc.docker
-
 script:
   
   # Basic role syntax check
   - sudo ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+  - sudo ansible-playbook tests/test.yml -i tests/inventory
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
