--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,6 +19,10 @@
     state: link
   when: ( mode == "server" )
 
+- name: set autocompletition for kubectl
+  shell: echo 'source <(kubectl completion bash)' >> ~/.bashrc
+  when: ( mode == "server" )
+
 - name: Install Helm v2
   shell: |
     export KUBECONFIG=/var/lib/rancher/k3s/server/cred/admin.kubeconfig
