--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
 
 - name: Install k3s server
   command: sh /tmp/k3s.sh --no-deploy traefik
-  environment: 
+  environment:
     INSTALL_K3S_VERSION: "{{ k3s_version }}"
   when: ( mode == "server" )
 
@@ -33,7 +33,7 @@
     kubectl create clusterrolebinding tiller \
       --clusterrole=cluster-admin \
       --serviceaccount=kube-system:tiller
-  
+
     helm init --service-account tiller
   when: ( mode == "server" ) and ( helm_version == "v2" )
 
@@ -82,15 +82,20 @@
 
 - name: wait 2 min for flannel to start
   wait_for:
-    timeout: 120 
+    timeout: 120
   delegate_to: localhost
   when: ( mode == "node" )
 
 - name: Install k3s node
-  command: sh /tmp/k3s.sh 
+  command: sh /tmp/k3s.sh
   environment:
     INSTALL_K3S_EXEC: "--node-label {{ node_label }}"
     K3S_URL: https://{{ master_ip }}:6443
     K3S_TOKEN: "{{ node_token.stdout }}"
   when: ( mode == "node" )
 
+- name: Install nfs-common
+  apt:
+    name: nfs-common
+    state: present
+  when: ( mode == "node" )
